crates/bsql/tests/compile_fail/multiple_statements.rs
fn main() {
    let _ = bsql::query!("SELECT 1; SELECT 2");
}
