crates/bsql/tests/compile_fail/multiple_statements.stderr
error: PostgreSQL error: cannot insert multiple commands into a prepared statement
 --> tests/compile_fail/multiple_statements.rs:2:13
  |
2 |     let _ = bsql::query!("SELECT 1; SELECT 2");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `bsql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
